# TeamSpeak3-Multibot-cpp

./: CMakeLists.txt  Makefile  Mój stolik.workspace  README.md  build.sh
.codelite/: Mój stolik.session  refactoring.db
Multibot/: CMakeLists.txt  Multibot.mk  Multibot.project  Multibot.txt  main.cpp
Multibot/Extras/ConfigReader/: ConfigFile.cpp  ConfigFile.hpp
Multibot/Extras/Menu/: Menu.cpp  Menu.hpp
Multibot/Extras/wwwReader/: www.cpp  www.hpp
Multibot/Functions/: Function.cpp  Function.hpp
Multibot/Functions/AntyVPN/: AntyVPN.cpp  AntyVPN.hpp
Multibot/Functions/ChannelCreator/: ChannelCreator.cpp  ChannelCreator.hpp
Multibot/Functions/PokeBot/: PokeBot.cpp  PokeBot.hpp
Multibot/Functions/WelcomeMessage/: WelcomeMessage.cpp  WelcomeMessage.hpp
Multibot/Loger/: Loger.cpp  Loger.hpp
Multibot/TeamSpeak3_API/: Ts3API.cpp  Ts3API.hpp
Multibot/TeamSpeak3_API/Socket/: Ts3Socket.cpp  Ts3Socket.hpp
Multibot/TeamSpeak3_API/Structs/: Ts3Structs.cpp  Ts3Structs.hpp
plugins/: welcomemessage.cpp
src/: Loger.cpp  ModulesLoader.cpp  commandLine.cpp  main.cpp
src/Ts3API/: Ts3API.cpp  Ts3Socket.cpp  Ts3Structs.cpp
src/Ts3API/includes/: Ts3API.hpp  Ts3Socket.hpp  Ts3Structs.hpp
src/includes/: Loger.hpp  ModulesLoader.hpp  PluginInterface.hpp  commandLine.hpp
